Oct 19, 2005

  * ADDED: SHIFT-click on Find *adds* search hits to the view.

  * ADDED: View/Show roots/... menu to highlight the roots of classes and
    properties from a specified file.

Oct 18, 2005

  * ADDED: rdf-diagram to bind ^L to ->layout

Sep 8, 2005

  * ADDED: Save PostScript to Windows.

Sep 6, 2005

  * ADDED: Simple print option for hierarchy and diagram.

Aug 9, 2005

  * Modify root_property/2 to check for super-properties of the same
    class only.

Jul 26, 2005

  * Fixed owl_satisfies/2 handling for `complement_of'.  Bob Wielinga.

May 20, 2005

  * Fixed display of `view->triples' for property nodes.

May 19, 2005

  * Provide namespace definitions as default only
	
May 11, 2005

  * Enhance embedding

May 2, 2005

  * FIXED: various issues with search and selecting values.  Allow for
    text of the form NS:String to search in a namespace.  Search for
    selecting values has been improved a lot.

Apr 18, 2005

  * ADDED: Search in all properties

Apr 3, 2005

  * ADDED: "Show my subjects" to the graph vizualisation.

  * CLEANUP: Some mode issues in the diagram vizualisation.

Mar 30, 2005

  * Added loading Prolog plugins from the commandline

  * Show subclasses of literal using `doc.xpm'.

Mar 29, 2005

  * Fix toplevel after changing to library.

Mar 3, 2005

  * Updated DC schemas from http://dublincore.org/schemas/rdfs/

SNAPSHOT 0.5
============

Mar 02, 2005

  * Some version cleanup

Feb 24, 2005

  * FIXED: various namespace issues

  * ADDED: class sheet: allow adding properties

Sep 13, 2004

  * ADDED: Read namespace identifiers from RDF sourcefiles.

Dec 3, 2003

  * FIXED: generate proper blank nodes in manipulating lists.

Dec 01, 2003

  * FIXED: Handle symmetric properties (Marijn Manders) 

  * ADDED: View/OWL/Super properties

SNAPSHOT 0.3
============

Nov 20, 2003

  * ADDED: Check database for triples that are not in any context.  If
    there are, add 'user' to save file menu.
