@@ -296,7 +296,7 @@ find(OT, String:for=name, How:how=[name],
 	),
 	new(Hits, hash_table),
 	(   call_rules(OT, find(String, Domain, PlFields, TheHow, Subject)),
-	    \+ get(Hits, member, Subject),
+	    \+ get(Hits, member, Subject, _),
 	    send(Hits, append, Subject),
 	    send(OT, show_hit, Subject),
 	    get(Hits, size, Count),
